--- a/project.html
+++ b/project.html
@@ -1,20 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Temperature Converter</title>
 
-    <link rel="stylesheet" href="project.css">
+    <html>
+<head><title>clock</title>
+    <link rel="stylesheet" href ="project.css">
 </head>
 <body>
-    <div class="box">
-        <h2>Temperature Converter</h2>
-        <input type="number" id="celsius" placeholder="Enter Celsius">
-
-        <button onclick="convert()">Convert</button>
-        <p id="result"></p>
+    <div class="clock">
+        <div class="clock-face">
+            <div class="number number1">1</div>
+            <div class="number number2">2</div>
+            <div class="number number3">3</div>
+            <div class="number number4">4</div>
+            <div class="number number5">5</div>
+            <div class="number number6">6</div>
+            <div class="number number7">7</div>
+            <div class="number number8">8</div>
+            <div class="number number9">9</div>
+            <div class="number number10">10</div>
+            <div class="number number11">11</div>
+            <div class="number number12">12</div>
+            <div class="hand hour-hand" id="hour-hand"></div>
+            <div class="hand minute-hand" id="minute-hand"></div>
+            <div class="hand second-hand" id="second-hand"></div>
+        </div>
     </div>
-
-    <script src="project.js"></script>
+    <script src="project.js"> </script>
 </body>
 </html>
-    
